SUBDIRS = \
           Source/xStl/data \
           Source/xStl/enc \
           Source/xStl/enc/digest \
           Source/xStl/enc/enc \
           Source/xStl/enc/random \
           Source/xStl/except \
           Source/xStl/os \
           Source/xStl/os/UnixOS \
           Source/xStl/parser \
           Source/xStl/stream \
           Source/xStl/utils \
           Source/xStl

if TESTS
SUBDIRS+= tests
endif

DIST_SUBDIRS = ${SUBDIRS}

